--- a/StudentSampleProject/StudentSampleSolution/Website/Steps/AddCss.html
+++ b/StudentSampleProject/StudentSampleSolution/Website/Steps/AddCss.html
@@ -7,23 +7,18 @@
 <head>
     <!-- Step 2.10:  Add a title, in this case, call it "Adding CSS" -->
     <!--Student: Insert Code Here.-->
-
-    <!-- Step 2.20: Add a css style section to the this file -->
+    <!-- Step 2.20: Add an css section to the this file -->
     <!-- NOTE: Typically, CSS files are not in the same file as html, but in an external file. -->
     <!--Student: Insert Code Here.-->
-
-
-    <!-- Step 2.30: Add a body tag, and give it the color "powderblue" -->
+    /* Step 2.30: Add a body tag, and give it the color "powderblue"*/
     <!--Student: Insert Code Here.-->
-
-    <!-- Step 2.40: Make the table heading blue
-         Step 2.41: Make the font large 
-         Step 2.42: Add padding -->
+    /* Step 2.40: Make the table heading blue */
+    /* Step 2.41: Make the font large */
+    /* Step 2.42: Add padding, .... */
     <!--Student: Insert Code Here.-->
-
 </head>
 <body>
-    <input id="searchText" type="text" width="900" value="" />
+    <input id="searchText" type="text" size="100" value="" />
 
     <table border="1" id="resultsTable">
         <tr>
@@ -31,20 +26,22 @@
             <th>title</th>
             <th>thumb</th>
         </tr>
-        
         <tr>
             <td>1</td>
-            <!-- Step 2.50:  Make the middle row have a background of aqua, using inline styles -->
-            <!--Student: Insert Code Here.-->
-
+            <!-- Step 2.50:  Make the middle columns have a background of aqua, using inline styles -->
+            <!--Student: Update below.-->
+            <td>2</td>
             <!-- Step 2.51:  Use the class attribute, call it lastLine, make it red -->
-            <!--Student: Insert Code Here.-->
+            <!--Student: Update below.-->
+            <td>3</td>
         </tr>
         <tr>
             <td>4</td>
-            <td style="background-color:aqua">5</td>
-            <td class="lastLine">6</td>
+            <td>5</td>
+            <td>6</td>
         </tr>
     </table>
 </body>
 </html>
+
+
