--- a/StudentSampleProject/StudentSampleSolution/Website/Steps/AddHtmlElements.html
+++ b/StudentSampleProject/StudentSampleSolution/Website/Steps/AddHtmlElements.html
@@ -1,5 +1,5 @@
 ﻿<!-- Overview: A basic web page -->
-<!-- Step:  html, head, body elements -->
+<!-- Step 1.00:  html, head, body elements -->
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -7,15 +7,13 @@
     <!-- Student: Insert Code Here -->
 </head>
 <body>
-    <!-- Step 1.20:  Add a text area, give it the id of "searchText" -->
+    <!-- Step 1.20:  Add a text area, give it the id of "searchText", and a size of 100 -->
     <!-- Student: Insert Code Here -->
-
     <!-- Step 1.30:  Add a table, with table headers of "date", "title", "thumb" -->
     <table border="1" id="resultsTable">
-        <!-- Add table headers of "date", "title", "thumb" -->
         <!-- Student: Insert Code Here -->
-            <!-- Step 1.40:  Add sample data to the table -->
-            <!-- Student: Insert Code Here -->
+        <!-- Step 1.40:  Add a sample data to the table -->
+        <!-- Student: Insert Code Here -->
     </table>
 </body>
 </html>
