--- a/StudentSampleProject/StudentSampleSolution/Website/Steps/UseEntityEndpoint.html
+++ b/StudentSampleProject/StudentSampleSolution/Website/Steps/UseEntityEndpoint.html
@@ -10,8 +10,7 @@
 <body>
 
     <input id="searchText" type="text" size="100" value="lam" />
-    <!-- Step 8.20: tie into the onclick event, and call the function "loadDatabaseUsingEntity" -->
-    <!-- Student: Insert Code Here -->
+    <br /><button onclick="loadRemoteData()">Search Database</button>
 
     <table border="1" id="resultsTable">
         <tr>
@@ -39,13 +38,27 @@
                 addRowToTable(item);
             }
         }
-        // Step 8.30: Call the loadDatabaseUsingEntity function (in order to initialize when the page loads)  */
-        // Student: Insert Code Here
 
-        function loadDatabaseUsingEntity() {
+        function loadRemoteData() {
             var search = $("#searchText").val();
-            /*  Step 8.40: Using JQuery ajax, call the url  'http://localhost:29594/api/LOCEntity/' */
-            // Student: Insert Code Here
+            /* Step 8.50: Using JQuery ajax, call the url  'http://localhost:29594/api/LOCEntity/' */
+            /* Step 8.51: In order for this to work, you will need to update the controller file: LOCEntityController.cs */
+            $.ajax({
+                type: 'get',
+                url: 'XXX',             //Student: Insert Code Here
+                dataType: 'json',
+                data: {
+                    fo: 'json',
+                    at: 'results',
+                    query: search
+                },
+                success: function (response) {
+                    loadData(response);
+                },
+                error: function (errorObject) {
+                    alert("error: " + errorObject.responseText)
+                }
+            })
         }
     </script>
 </body>
