--- a/StudentSampleProject/StudentSampleSolution/Website/Steps/UseSimpleEndpoint.html
+++ b/StudentSampleProject/StudentSampleSolution/Website/Steps/UseSimpleEndpoint.html
@@ -10,8 +10,7 @@
 <body>
 
     <input id="searchText" type="text" size="100" value="Migrant Mother. Dorothea Lange" />
-    <!-- Step 6.20: tie into the onclick event, and call the function "loadSimpleEndpoint" -->
-    <!--Student:  Insert Code Here-->
+    <br /><button onclick="loadRemoteData()">Search Remote</button>
 
     <table border="1" id="resultsTable">
         <tr>
@@ -38,12 +37,29 @@
                 addRowToTable(item);
             }
         }
-        // Step 6.30: Call the loadSimpleEndpoint function (in order to initialize when the page loads)
-        //Student: Insert Code Here
+        loadRemoteData();
 
         // Step 6.40: Define the loadSimpleEndpoint function that will pass the search information to an ajax call.  Upon returning, the loadData will be called with the returned data.
-        function loadSimpleEndpoint() {
-            //Student: Insert Code Here
+        function loadRemoteData() {
+            var search = $("#searchText").val();
+            /* Step 6.45: Using JQuery ajax, call the url  'http://localhost:29594/api/loc/' */
+            /* Step 6.50: In order for this to work, you will need to update the controller file: LOCController.cs */
+            $.ajax({
+                type: 'get',
+                url: 'XXX',             //Student: Insert Code Here
+                dataType: 'json',
+                data: {
+                    fo: 'json',
+                    at: 'results',
+                    query: search
+                },
+                success: function (response) {
+                    loadData(response);
+                },
+                error: function (errorObject) {
+                    alert("error: " + errorObject.responseText)
+                }
+            })
         }
     </script>
 </body>
